--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -63,10 +63,24 @@
                         </a>
     
                     </li>
+                    <li class="menu-item ">
+                        <a class="menu-link" href="/loadCoupon">
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Coupon</span>
+                        </a>
+    
+                    </li>
+                    <li class="menu-item ">
+                        <a class="menu-link" href="/loadOffer">
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Offers</span>
+                        </a>
+    
+                    </li>
     
                     <br />
                     <br />
-            </nav>  
+            </nav>
         </aside>
         <main class="main-wrap">
             <header class="main-header navbar">
