--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -66,7 +66,7 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/loadCoupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Coupon</span>
                     </a>
@@ -99,8 +99,8 @@
                         <option value="Ahmed Hassan"></option>
                     </datalist>
                 </form>
-            </div> -->
-            <!-- <div class="col-nav">
+            </div>
+            <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"><i
                         class="material-icons md-apps"></i></button>
                 <ul class="nav">
@@ -118,88 +118,180 @@
                         <a href="#" class="requestfullscreen nav-link btn-icon"><i
                                 class="material-icons md-cast"></i></a>
                     </li>
-
-
+                    <li class="dropdown nav-item">
+                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage"
+                            aria-expanded="false"><i class="material-icons md-public"></i></a>
+                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
+                            <a class="dropdown-item text-brand" href="#"><img src="assets/imgs/theme/flag-us.png"
+                                    alt="English" />English</a>
+                            <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-fr.png"
+                                    alt="Français" />Français</a>
+                            <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-jp.png"
+                                    alt="Français" />日本語</a>
+                            <a class="dropdown-item" href="#"><img src="assets/imgs/theme/flag-cn.png"
+                                    alt="Français" />中国人</a>
+                        </div>
+                    </li>
+                    <li class="dropdown nav-item">
+                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount"
+                            aria-expanded="false"> <img class="img-xs rounded-circle"
+                                src="assets/imgs/people/avatar-2.png" alt="User" /></a>
+                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
+                            <a class="dropdown-item" href="#"><i class="material-icons md-perm_identity"></i>Edit
+                                Profile</a>
+                            <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account
+                                Settings</a>
+                            <a class="dropdown-item" href="#"><i
+                                    class="material-icons md-account_balance_wallet"></i>Wallet</a>
+                            <a class="dropdown-item" href="#"><i class="material-icons md-receipt"></i>Billing</a>
+                            <a class="dropdown-item" href="#"><i class="material-icons md-help_outline"></i>Help
+                                center</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item text-danger" href="#"><i
+                                    class="material-icons md-exit_to_app"></i>Logout</a>
+                        </div>
+                    </li>
                 </ul>
             </div> -->
         </header>
         <section class="content-main">
             <div class="content-header">
                 <div>
-                    <h2 class="content-title card-title">Users List</h2>
+                    <h2 class="content-title card-title">Coupon</h2>
 
                 </div>
-                <!-- <div>
-                    <input type="text" placeholder="Search order ID" class="form-control bg-white" />
-                </div> -->
+
+                <div>
+                    <!-- <a href="#" class="btn btn-light rounded font-md">Export</a>
+                    <a href="#" class="btn btn-light rounded font-md">Import</a> -->
+                    <a href="/addCoupon" class="btn btn-primary btn-sm rounded">Create Coupon</a>
+                </div>
             </div>
             <div class="card mb-4">
-
+                <header class="card-header">
+                    <!-- <div class="row gx-3">
+                        <div class="col-lg-4 col-md-6 me-auto">
+                            <input type="text" placeholder="Search..." class="form-control" />
+                        </div>
+                        <div class="col-lg-2 col-6 col-md-3">
+                            <select class="form-select">
+                                <option>Status</option>
+                                <option>Active</option>
+                                <option>Disabled</option>
+                                <option>Show all</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-2 col-6 col-md-3">
+                            <select class="form-select">
+                                <option>Show 20</option>
+                                <option>Show 30</option>
+                                <option>Show 40</option>
+                            </select>
+                        </div>
+                    </div> -->
+                </header>
+                <!-- card-header end// -->
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th>N0s</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Mobile</th>
-                                    <th scope="col">Status</th>
-                                    <!-- <th scope="col">Date</th> -->
+                                    <th scope="col">Code</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Discount <br> Amount</th>
+                                    <th scope="col">Expire Date</th>
+                                  
+
+                                    <th scope="col">Min <br> Amount</th>
+                                    <!-- <th scope="col" class="text-end">Delete</th> -->
+                                    <!-- <th scope="col" class="text-end">Edit</th> -->
                                     <th scope="col" class="text-end">Action</th>
+
                                 </tr>
                             </thead>
                             <tbody>
 
-                                <% if(users.length> 0 ){%>
 
-                                    <% for( let i=0 ; i < users.length ; i++){ %>
 
+                                <% if(couponData!="undefined" ) {%>
+
+                                    <% couponData.forEach((data)=>{ %>
 
 
 
                                         <tr>
                                             <td>
-                                                <%= i+1%>
+                                                <%= data.couponName%>
                                             </td>
-                                            <td><b>
-                                                    <%= users[i].name%>
-                                                </b></td>
+
+
+
                                             <td>
-                                                <%= users[i].email%>
+                                                <%= data.couponCode%>
                                             </td>
+
+
                                             <td>
-                                                <%= users[i].mobile%>
+                                                <%= data.couponDescription%>
+
                                             </td>
 
 
-                                            <td class="text">
-                                                <% if (users[i].isBlocked==false) { %>
-                                                    <span class="badge rounded-pill alert-warning">Inactive</span>
-                                                    <% } else { %>
-                                                        <span class="badge rounded-pill alert-success">Active</span>
-                                                        <% } %>
+
+                                            <td>
+                                                <%= data.discountAmount%>
                                             </td>
 
-                                            <td class="text-end">
-                                                <% if (users[i].isBlocked==false) { %>
-                                                    <button class="btn btn-md rounded font-sm"
-                                                        onclick="unblockUser('<%=users[i]._id %>')">Unblock</button>
-                                                    <% } else { %>
-                                                        <button class="btn btn-md rounded font-sm"
-                                                            onclick="blockUser('<%=users[i]._id %>')"
-                                                            style="background-color: red;">Block</button>
-                                                        <% } %>
+
+
+
+                                            <td>
+                                                <%= new Date(data.expiryDate).toLocaleString() %>
+
                                             </td>
+
+
+                                            <td>
+                                                <%= data.minAmount%>
+                                            </td>
+
+
+
+
+
+                                            <!-- <td class="text-end">
+                                                <a href="/"
+                                                    class="btn btn-md rounded font-sm">Edit</a>
+                                            </td> -->
+                                                  <td class="text-end">
+                                                <button onclick="confirmDelete('<%= data._id %>')"
+                                                    class="btn btn-md rounded font-sm">Remove</button>
+                                            </td>
+
+                                            <!-- <td class="text-end">
+                                                <a href="#" style="background-color: red;"
+                                                    class="btn btn-md rounded font-sm">Remove</a>
+                                            </td> -->
                                         </tr>
 
-                                        <% } %>
-                                            <% }else{%>
 
+
+
+                                        <%})%>
+                                            <%}else{ %>
                                                 <tr>
-                                                    <td colspan="5">Users Not Found</td>
+                                                    <td colspan="5"> Coupon not found</td>
                                                 </tr>
+
                                                 <% } %>
+
+
+
+
+
+
+
 
                             </tbody>
                         </table>
@@ -246,43 +338,27 @@
     <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/main.js?v=1.1" type="text/javascript"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script>
-        function blockUser(userId) {
+        function confirmDelete(couponId) {
             Swal.fire({
                 title: 'Are you sure?',
-                text: 'You want to block this user?',
+                text: 'You won\'t be able to revert this!',
                 icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: 'red',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, block it!'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    window.location.href = `/block?id=${userId}`;
-                }
-            });
-        }
-
-        function unblockUser(userId) {
-            Swal.fire({
-                title: 'Are you sure?',
-                text: 'You want to unblock this user?',
-                icon: 'info',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, unblock it!'
+                confirmButtonText: 'Yes, remove it!'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = `/unblock?id=${userId}`;
+                    // Redirect to the delete route with the product ID
+                    window.location.href = `/RemoveCoupon?id=${couponId}`;
                 }
             });
         }
     </script>
 
-
+    
 </body>
 
 </html>
